parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIOS_UNA_LINEA
    COMENTARIOS_VARIAS_LINEAS
    LECTURA_DE_TECLADO
    SALIDA_DE_PANTALLA
    SENTENCIA_LOGICA_OPCIONES
    SENTENCIA_RETORNO
    SIMBOLO_APERTURA_ARREGLO
    SIMBOLO_CADENA_TEXTO
    SIMBOLO_CIERRE_ARREGLO
    SIMBOLO_OPCIONES

Grammar

Rule 0     S' -> program
Rule 1     program -> bloque
Rule 2     bloque -> sentencia enunciado
Rule 3     enunciado -> sentencia
Rule 4     enunciado -> expresion
Rule 5     enunciado -> enunciado enunciado
Rule 6     sentencia -> sentencia sentencia
Rule 7     sentencia -> sentencia
Rule 8     sentencia -> romper
Rule 9     sentencia -> tipo_dato
Rule 10    sentencia -> logica
Rule 11    sentencia -> ciclo
Rule 12    sentencia -> mientras
Rule 13    expresion -> expresion expresion
Rule 14    expresion -> expresion
Rule 15    expresion -> operacion
Rule 16    operando -> ID_VARIABLE
Rule 17    operando -> NUMERO
Rule 18    operando -> SIMBOLO_DELIMITADOR_APERTURA NUMERO SIMBOLO_DELIMITADOR_CIERRE
Rule 19    tipo_dato -> TIPO_DATO_ENT ID_VARIABLE asignacion
Rule 20    tipo_dato -> TIPO_DATO_DEC ID_VARIABLE decimal
Rule 21    tipo_dato -> TIPO_DATO_TXT ID_VARIABLE asignacion
Rule 22    tipo_dato -> TIPO_DATO_BIN ID_VARIABLE asignacion
Rule 23    asignacion -> OPERADOR_ASIGNACION NUMERO SIMBOLO_FIN_LINEA
Rule 24    asignacion -> OPERADOR_ASIGNACION TEXTO SIMBOLO_FIN_LINEA
Rule 25    asignacion -> OPERADOR_ASIGNACION ID_VARIABLE SIMBOLO_FIN_LINEA
Rule 26    asignacion -> OPERADOR_ASIGNACION operacion
Rule 27    decimal -> OPERADOR_ASIGNACION NUMERO SIMBOLO_DECIMAL NUMERO SIMBOLO_FIN_LINEA
Rule 28    asignacion -> SIMBOLO_FIN_LINEA
Rule 29    operacion -> operando SIMBOLO_OPERACION_ARITMETICA_MAS operando SIMBOLO_FIN_LINEA
Rule 30    operacion -> operando SIMBOLO_OPERACION_ARITMETICA_MENOS operando SIMBOLO_FIN_LINEA
Rule 31    operacion -> operando SIMBOLO_OPERACION_ARITMETICA_POR operando SIMBOLO_FIN_LINEA
Rule 32    operacion -> operando SIMBOLO_OPERACION_ARITMETICA_DIVISION operando SIMBOLO_FIN_LINEA
Rule 33    operacion -> operando SIMBOLO_OPERACION_ARITMETICA_MOD operando SIMBOLO_FIN_LINEA
Rule 34    operacion -> operando OPERADOR_ASIGNACION operando SIMBOLO_FIN_LINEA
Rule 35    operacion -> operando SIMBOLO_OPERACION_ARITMETICA_MAS SIMBOLO_OPERACION_ARITMETICA_MAS
Rule 36    operacion -> operando SIMBOLO_OPERACION_ARITMETICA_MAS SIMBOLO_OPERACION_ARITMETICA_MAS SIMBOLO_FIN_LINEA
Rule 37    relacion -> SIMBOLO_OPERACION_LOGICA_MAYOR
Rule 38    relacion -> SIMBOLO_OPERACION_LOGICA_MENOR
Rule 39    relacion -> SIMBOLO_OPERACION_LOGICA_MAYOR_IGUAL
Rule 40    relacion -> SIMBOLO_OPERACION_LOGICA_MENOR_IGUAL
Rule 41    relacion -> SIMBOLO_OPERACION_LOGICA_NO_IGUAL
Rule 42    relacion -> SIMBOLO_OPERACION_LOGICA_IGUAL
Rule 43    logica -> SENTENCIA_LOGICA_SI SIMBOLO_DELIMITADOR_APERTURA logicaOP SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE
Rule 44    logica -> SENTENCIA_LOGICA_SI SIMBOLO_DELIMITADOR_APERTURA logicaOP SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE SENTENCIA_LOGICA_SINO SIMBOLO_APERTURA_BLOQUE operacion SIMBOLO_CIERRE_BLOQUE
Rule 45    romper -> SENTENCIA_SALIDA_CICLOS SIMBOLO_FIN_LINEA
Rule 46    logicaOP -> operando relacion operando
Rule 47    ciclo -> SENTENCIA_LOGICA_CICLO SIMBOLO_DELIMITADOR_APERTURA tipo_dato logicaOP SIMBOLO_FIN_LINEA operacion SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE
Rule 48    ciclo -> SENTENCIA_LOGICA_CICLO SIMBOLO_DELIMITADOR_APERTURA tipo_dato logicaOP SIMBOLO_FIN_LINEA operacion SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE SENTENCIA_SALIDA_CICLOS SIMBOLO_FIN_LINEA enunciado SIMBOLO_CIERRE_BLOQUE
Rule 49    ciclo -> SENTENCIA_LOGICA_CICLO SIMBOLO_DELIMITADOR_APERTURA tipo_dato logicaOP SIMBOLO_FIN_LINEA operacion SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SENTENCIA_SALIDA_CICLOS SIMBOLO_FIN_LINEA SIMBOLO_CIERRE_BLOQUE
Rule 50    mientras -> SENTENCIA_LOGICA_MIENTRAS SIMBOLO_DELIMITADOR_APERTURA logicaOP SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE

Terminals, with rules where they appear

COMENTARIOS_UNA_LINEA : 
COMENTARIOS_VARIAS_LINEAS : 
ID_VARIABLE          : 16 19 20 21 22 25
LECTURA_DE_TECLADO   : 
NUMERO               : 17 18 23 27 27
OPERADOR_ASIGNACION  : 23 24 25 26 27 34
SALIDA_DE_PANTALLA   : 
SENTENCIA_LOGICA_CICLO : 47 48 49
SENTENCIA_LOGICA_MIENTRAS : 50
SENTENCIA_LOGICA_OPCIONES : 
SENTENCIA_LOGICA_SI  : 43 44
SENTENCIA_LOGICA_SINO : 44
SENTENCIA_RETORNO    : 
SENTENCIA_SALIDA_CICLOS : 45 48 49
SIMBOLO_APERTURA_ARREGLO : 
SIMBOLO_APERTURA_BLOQUE : 43 44 44 47 48 49 50
SIMBOLO_CADENA_TEXTO : 
SIMBOLO_CIERRE_ARREGLO : 
SIMBOLO_CIERRE_BLOQUE : 43 44 44 47 48 49 50
SIMBOLO_DECIMAL      : 27
SIMBOLO_DELIMITADOR_APERTURA : 18 43 44 47 48 49 50
SIMBOLO_DELIMITADOR_CIERRE : 18 43 44 47 48 49 50
SIMBOLO_FIN_LINEA    : 23 24 25 27 28 29 30 31 32 33 34 36 45 47 48 48 49 49
SIMBOLO_OPCIONES     : 
SIMBOLO_OPERACION_ARITMETICA_DIVISION : 32
SIMBOLO_OPERACION_ARITMETICA_MAS : 29 35 35 36 36
SIMBOLO_OPERACION_ARITMETICA_MENOS : 30
SIMBOLO_OPERACION_ARITMETICA_MOD : 33
SIMBOLO_OPERACION_ARITMETICA_POR : 31
SIMBOLO_OPERACION_LOGICA_IGUAL : 42
SIMBOLO_OPERACION_LOGICA_MAYOR : 37
SIMBOLO_OPERACION_LOGICA_MAYOR_IGUAL : 39
SIMBOLO_OPERACION_LOGICA_MENOR : 38
SIMBOLO_OPERACION_LOGICA_MENOR_IGUAL : 40
SIMBOLO_OPERACION_LOGICA_NO_IGUAL : 41
TEXTO                : 24
TIPO_DATO_BIN        : 22
TIPO_DATO_DEC        : 20
TIPO_DATO_ENT        : 19
TIPO_DATO_TXT        : 21
error                : 

Nonterminals, with rules where they appear

asignacion           : 19 21 22
bloque               : 1
ciclo                : 11
decimal              : 20
enunciado            : 2 5 5 43 44 47 48 49 50
expresion            : 4 13 13 14
logica               : 10
logicaOP             : 43 44 47 48 49 50
mientras             : 12
operacion            : 15 26 44 47 48 49
operando             : 29 29 30 30 31 31 32 32 33 33 34 34 35 36 46 46
program              : 0
relacion             : 46
romper               : 8
sentencia            : 2 3 6 6 7
tipo_dato            : 9 47 48 49

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . bloque
    (2) bloque -> . sentencia enunciado
    (6) sentencia -> . sentencia sentencia
    (7) sentencia -> . sentencia
    (8) sentencia -> . romper
    (9) sentencia -> . tipo_dato
    (10) sentencia -> . logica
    (11) sentencia -> . ciclo
    (12) sentencia -> . mientras
    (45) romper -> . SENTENCIA_SALIDA_CICLOS SIMBOLO_FIN_LINEA
    (19) tipo_dato -> . TIPO_DATO_ENT ID_VARIABLE asignacion
    (20) tipo_dato -> . TIPO_DATO_DEC ID_VARIABLE decimal
    (21) tipo_dato -> . TIPO_DATO_TXT ID_VARIABLE asignacion
    (22) tipo_dato -> . TIPO_DATO_BIN ID_VARIABLE asignacion
    (43) logica -> . SENTENCIA_LOGICA_SI SIMBOLO_DELIMITADOR_APERTURA logicaOP SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE
    (44) logica -> . SENTENCIA_LOGICA_SI SIMBOLO_DELIMITADOR_APERTURA logicaOP SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE SENTENCIA_LOGICA_SINO SIMBOLO_APERTURA_BLOQUE operacion SIMBOLO_CIERRE_BLOQUE
    (47) ciclo -> . SENTENCIA_LOGICA_CICLO SIMBOLO_DELIMITADOR_APERTURA tipo_dato logicaOP SIMBOLO_FIN_LINEA operacion SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE
    (48) ciclo -> . SENTENCIA_LOGICA_CICLO SIMBOLO_DELIMITADOR_APERTURA tipo_dato logicaOP SIMBOLO_FIN_LINEA operacion SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE SENTENCIA_SALIDA_CICLOS SIMBOLO_FIN_LINEA enunciado SIMBOLO_CIERRE_BLOQUE
    (49) ciclo -> . SENTENCIA_LOGICA_CICLO SIMBOLO_DELIMITADOR_APERTURA tipo_dato logicaOP SIMBOLO_FIN_LINEA operacion SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SENTENCIA_SALIDA_CICLOS SIMBOLO_FIN_LINEA SIMBOLO_CIERRE_BLOQUE
    (50) mientras -> . SENTENCIA_LOGICA_MIENTRAS SIMBOLO_DELIMITADOR_APERTURA logicaOP SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE

    SENTENCIA_SALIDA_CICLOS shift and go to state 9
    TIPO_DATO_ENT   shift and go to state 10
    TIPO_DATO_DEC   shift and go to state 11
    TIPO_DATO_TXT   shift and go to state 12
    TIPO_DATO_BIN   shift and go to state 13
    SENTENCIA_LOGICA_SI shift and go to state 14
    SENTENCIA_LOGICA_CICLO shift and go to state 15
    SENTENCIA_LOGICA_MIENTRAS shift and go to state 16

    program                        shift and go to state 1
    bloque                         shift and go to state 2
    sentencia                      shift and go to state 3
    romper                         shift and go to state 4
    tipo_dato                      shift and go to state 5
    logica                         shift and go to state 6
    ciclo                          shift and go to state 7
    mientras                       shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> bloque .

    $end            reduce using rule 1 (program -> bloque .)


state 3

    (2) bloque -> sentencia . enunciado
    (6) sentencia -> sentencia . sentencia
    (7) sentencia -> sentencia .
    (3) enunciado -> . sentencia
    (4) enunciado -> . expresion
    (5) enunciado -> . enunciado enunciado
    (6) sentencia -> . sentencia sentencia
    (7) sentencia -> . sentencia
    (8) sentencia -> . romper
    (9) sentencia -> . tipo_dato
    (10) sentencia -> . logica
    (11) sentencia -> . ciclo
    (12) sentencia -> . mientras
    (13) expresion -> . expresion expresion
    (14) expresion -> . expresion
    (15) expresion -> . operacion
    (45) romper -> . SENTENCIA_SALIDA_CICLOS SIMBOLO_FIN_LINEA
    (19) tipo_dato -> . TIPO_DATO_ENT ID_VARIABLE asignacion
    (20) tipo_dato -> . TIPO_DATO_DEC ID_VARIABLE decimal
    (21) tipo_dato -> . TIPO_DATO_TXT ID_VARIABLE asignacion
    (22) tipo_dato -> . TIPO_DATO_BIN ID_VARIABLE asignacion
    (43) logica -> . SENTENCIA_LOGICA_SI SIMBOLO_DELIMITADOR_APERTURA logicaOP SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE
    (44) logica -> . SENTENCIA_LOGICA_SI SIMBOLO_DELIMITADOR_APERTURA logicaOP SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE SENTENCIA_LOGICA_SINO SIMBOLO_APERTURA_BLOQUE operacion SIMBOLO_CIERRE_BLOQUE
    (47) ciclo -> . SENTENCIA_LOGICA_CICLO SIMBOLO_DELIMITADOR_APERTURA tipo_dato logicaOP SIMBOLO_FIN_LINEA operacion SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE
    (48) ciclo -> . SENTENCIA_LOGICA_CICLO SIMBOLO_DELIMITADOR_APERTURA tipo_dato logicaOP SIMBOLO_FIN_LINEA operacion SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE SENTENCIA_SALIDA_CICLOS SIMBOLO_FIN_LINEA enunciado SIMBOLO_CIERRE_BLOQUE
    (49) ciclo -> . SENTENCIA_LOGICA_CICLO SIMBOLO_DELIMITADOR_APERTURA tipo_dato logicaOP SIMBOLO_FIN_LINEA operacion SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SENTENCIA_SALIDA_CICLOS SIMBOLO_FIN_LINEA SIMBOLO_CIERRE_BLOQUE
    (50) mientras -> . SENTENCIA_LOGICA_MIENTRAS SIMBOLO_DELIMITADOR_APERTURA logicaOP SIMBOLO_DELIMITADOR_CIERRE SIMBOLO_APERTURA_BLOQUE enunciado SIMBOLO_CIERRE_BLOQUE
    (29) operacion -> . operando SIMBOLO_OPERACION_ARITMETICA_MAS operando SIMBOLO_FIN_LINEA
    (30) operacion -> . operando SIMBOLO_OPERACION_ARITMETICA_MENOS operando SIMBOLO_FIN_LINEA
    (31) operacion -> . operando SIMBOLO_OPERACION_ARITMETICA_POR operando SIMBOLO_FIN_LINEA
    (32) operacion -> . operando SIMBOLO_OPERACION_ARITMETICA_DIVISION operando SIMBOLO_FIN_LINEA
    (33) operacion -> . operando SIMBOLO_OPERACION_ARITMETICA_MOD operando SIMBOLO_FIN_LINEA
    (34) operacion -> . operando OPERADOR_ASIGNACION operando SIMBOLO_FIN_LINEA
    (35) operacion -> . operando SIMBOLO_OPERACION_ARITMETICA_MAS SIMBOLO_OPERACION_ARITMETICA_MAS
    (36) operacion -> . operando SIMBOLO_OPERACION_ARITMETICA_MAS SIMBOLO_OPERACION_ARITMETICA_MAS SIMBOLO_FIN_LINEA
    (16) operando -> . ID_VARIABLE
    (17) operando -> . NUMERO
    (18) operando -> . SIMBOLO_DELIMITADOR_APERTURA NUMERO SIMBOLO_DELIMITADOR_CIERRE

  ! shift/reduce conflict for SENTENCIA_SALIDA_CICLOS resolved as shift
  ! shift/reduce conflict for TIPO_DATO_ENT resolved as shift
  ! shift/reduce conflict for TIPO_DATO_DEC resolved as shift
  ! shift/reduce conflict for TIPO_DATO_TXT resolved as shift
  ! shift/reduce conflict for TIPO_DATO_BIN resolved as shift
  ! shift/reduce conflict for SENTENCIA_LOGICA_SI resolved as shift
  ! shift/reduce conflict for SENTENCIA_LOGICA_CICLO resolved as shift
  ! shift/reduce conflict for SENTENCIA_LOGICA_MIENTRAS resolved as shift
  ! shift/reduce conflict for ID_VARIABLE resolved as shift
  ! shift/reduce conflict for NUMERO resolved as shift
  ! shift/reduce conflict for SIMBOLO_DELIMITADOR_APERTURA resolved as shift
    SENTENCIA_SALIDA_CICLOS shift and go to state 9
    TIPO_DATO_ENT   shift and go to state 10
    TIPO_DATO_DEC   shift and go to state 11
    TIPO_DATO_TXT   shift and go to state 12
    TIPO_DATO_BIN   shift and go to state 13
    SENTENCIA_LOGICA_SI shift and go to state 14
    SENTENCIA_LOGICA_CICLO shift and go to state 15
    SENTENCIA_LOGICA_MIENTRAS shift and go to state 16
    ID_VARIABLE     shift and go to state 21
    NUMERO          shift and go to state 24
    SIMBOLO_DELIMITADOR_APERTURA shift and go to state 22

  ! SENTENCIA_SALIDA_CICLOS [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! TIPO_DATO_ENT   [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! TIPO_DATO_DEC   [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! TIPO_DATO_TXT   [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! TIPO_DATO_BIN   [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! SENTENCIA_LOGICA_SI [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! SENTENCIA_LOGICA_CICLO [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! SENTENCIA_LOGICA_MIENTRAS [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! ID_VARIABLE     [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! NUMERO          [ reduce using rule 7 (sentencia -> sentencia .) ]
  ! SIMBOLO_DELIMITADOR_APERTURA [ reduce using rule 7 (sentencia -> sentencia .) ]

    sentencia                      shift and go to state 17
    enunciado                      shift and go to state 18
    expresion                      shift and go to state 19
    romper                         shift and go to state 4
    tipo_dato                      shift and go to state 5
    logica                         shift and go to state 6
    ciclo                          shift and go to state 7
    mientras                       shift and go to state 8
    operacion                      shift and go to state 20
    operando                       shift and go to state 23

state 4

    (8) sentencia -> romper .

    SENTENCIA_SALIDA_CICLOS reduce using rule 8 (sentencia -> romper .)
    TIPO_DATO_ENT   reduce using rule 8 (sentencia -> romper .)
    TIPO_DATO_DEC   reduce using rule 8 (sentencia -> romper .)
    TIPO_DATO_TXT   reduce using rule 8 (sentencia -> romper .)
    TIPO_DATO_BIN   reduce using rule 8 (sentencia -> romper .)
    SENTENCIA_LOGICA_SI reduce using rule 8 (sentencia -> romper .)
    SENTENCIA_LOGICA_CICLO reduce using rule 8 (sentencia -> romper .)
    SENTENCIA_LOGICA_MIENTRAS reduce using rule 8 (sentencia -> romper .)
    ID_VARIABLE     reduce using rule 8 (sentencia -> romper .)
    NUMERO          reduce using rule 8 (sentencia -> romper .)
    SIMBOLO_DELIMITADOR_APERTURA reduce using rule 8 (sentencia -> romper .)
    $end            reduce using rule 8 (sentencia -> romper .)
    SIMBOLO_CIERRE_BLOQUE reduce using rule 8 (sentencia -> romper .)


state 5

    (9) sentencia -> tipo_dato .

    SENTENCIA_SALIDA_CICLOS reduce using rule 9 (sentencia -> tipo_dato .)
    TIPO_DATO_ENT   reduce using rule 9 (sentencia -> tipo_dato .)
    TIPO_DATO_DEC   reduce using rule 9 (sentencia -> tipo_dato .)
    TIPO_DATO_TXT   reduce using rule 9 (sentencia -> tipo_dato .)
    TIPO_DATO_BIN   reduce using rule 9 (sentencia -> tipo_dato .)
    SENTENCIA_LOGICA_SI reduce using rule 9 (sentencia -> tipo_dato .)
    SENTENCIA_LOGICA_CICLO reduce using rule 9 (sentencia -> tipo_dato .)
    SENTENCIA_LOGICA_MIENTRAS reduce using rule 9 (sentencia -> tipo_dato .)
    ID_VARIABLE     reduce using rule 9 (sentencia -> tipo_dato .)
    NUMERO          reduce using rule 9 (sentencia -> tipo_dato .)
    SIMBOLO_DELIMITADOR_APERTURA reduce using rule 9 (sentencia -> tipo_dato .)
    $end            reduce using rule 9 (sentencia -> tipo_dato .)
    SIMBOLO_CIERRE_BLOQUE reduce using rule 9 (sentencia -> tipo_dato .)


state 6

    (10) sentencia -> logica .

    SENTENCIA_SALIDA_CICLOS reduce using rule 10 (sentencia -> logica .)
    TIPO_DATO_ENT   reduce using rule 10 (sentencia -> logica .)
    TIPO_DATO_DEC   reduce using rule 10 (sentencia -> logica .)
    TIPO_DATO_TXT   reduce using rule 10 (sentencia -> logica .)
    TIPO_DATO_BIN   reduce using rule 10 (sentencia -> logica .)
    SENTENCIA_LOGICA_SI reduce using rule 10 (sentencia -> logica .)
    SENTENCIA_LOGICA_CICLO reduce using rule 10 (sentencia -> logica .)
    SENTENCIA_LOGICA_MIENTRAS reduce using rule 10 (sentencia -> logica .)
    ID_VARIABLE     reduce using rule 10 (sentencia -> logica .)
    NUMERO          reduce using rule 10 (sentencia -> logica .)
    SIMBOLO_DELIMITADOR_APERTURA reduce using rule 10 (sentencia -> logica .)
    $end            reduce using rule 10 (sentencia -> logica .)
    SIMBOLO_CIERRE_BLOQUE reduce using rule 10 (sentencia -> logica .)


state 7

    (11) sentencia -> ciclo .
